RESOLVED FIXED23349
Don't store obsolete caches in disk storage
https://bugs.webkit.org/show_bug.cgi?id=23349
Summary Don't store obsolete caches in disk storage
Alexey Proskuryakov
Reported 2009-01-15 07:27:32 PST
We only need to store the newest cache for each group in disk cache. Currently, non-newest caches are removed after being destroyed in memory, but this leaves the database with too much data. This obsolete data won't ever be removed if the browser crashes in between.
Attachments
proposed patch (5.77 KB, patch)
2009-01-15 07:36 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2009-01-15 07:36:14 PST
Created attachment 26757 [details] proposed patch
Anders Carlsson
Comment 2 2009-01-15 14:40:53 PST
Comment on attachment 26757 [details] proposed patch r=me
Alexey Proskuryakov
Comment 3 2009-01-15 23:44:39 PST
Committed revision 39962.
Note You need to log in before you can comment on or make changes to this bug.