WebCore/loader/appcache/ApplicationCache.cpp
@@ -76,6 +76,7 @@ void ApplicationCache::addResource(PassRefPtr<ApplicationCacheResource> resource
     
     if (m_storageID) {
         ASSERT(!resource->storageID());
+        ASSERT(resource->type() & (ApplicationCacheResource::Dynamic | ApplicationCacheResource::Implicit));
         
         // Add the resource to the storage.
         cacheStorage().store(resource.get(), this);
